# GFLIM

./: CMakeLists.txt  Pipfile  README.md  make.sh
PyIFT/: LICENSE.txt  README.txt  dist-pyift.sh  install-pyift.sh  install.txt  ref.txt  setup.cfg  setup.py
PyIFT/docs/: .Rhistory  PyIFT_Documentation.Rmd  PyIFT_Documentation.html  airplane_0_label.txt  airplane_1_label.txt  airplane_all_label.txt  img.css  parasite.txt
PyIFT/extend/: DblArrayExt.i  FloatArrayExt.i  IntArrayExt.i  IntMatrixExt.i  VoxelArrayExt.i  iftAdjRelExt.i  iftColorExt.i  iftColorTableExt.i  iftCplGraphExt.i  iftDTForestExt.i  iftDataSetExt.i  iftDoubleMatrixExt.i  iftDynamicSetExt.i  iftDynamicTreeExt.i  iftFImageExt.i  iftFileSetExt.i  iftHistogramExt.i  iftImageExt.i  iftImageForestExt.i  iftKnnGraphExt.i  iftLabeledSetExt.i  iftMImageArrayExt.i  iftMImageExt.i  iftMatrixExt.i  iftRobotExt.i  iftSetExt.i  iftSwig.i
PyIFT/parser/: parser.py
PyIFT/pyfunc/: Color.i  DblArray.i  FloatArray.i  IntArray.i  LabeledSet.i  Set.i  VoxelArray.i  iftBasicDataTypes.i  iftBoundingBox.i  iftCSV.i  iftClustering.i  iftDataSet.i  iftImage.i  iftMImage.i
PyIFT/pyift/: pyift.i  pyift_wrap.c
PyIFT/pyift.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyIFT/src/: AdaPro.i  AnomalyDetection.i  AsymmetryAnalysis.i  BMap.i  BasicDataTypes.i  BoundingBox.i  CSV.i  CharArray.i  Color.i  DblArray.i  DynamicTrees.i  Elastix.i  File.i  FileSet.i  FloatArray.i  GrabCut.i  Histogram.i  IntArray.i  IntMatrix.i  LabeledSet.i  LargeMargin.i  MSP.i  Matrix.i  MetricLearnCore.i  PreProcessing.i  Roi.i  SOSM-S.i  SaliencyArray.i  Set.i  VoxelArray.i  ift.i  iftActiveLearning.i  iftAdjSet.i  iftAdjacency.i  iftArgumentList.i  iftBagOfFeatures.i  iftBagOfVisualWords.i  iftBasicDataTypes.i  iftCSV.i  (+61 more)
architectures/: L1_k3x3_d1x1_maxp3x3_L2_k3x3_d1x1_maxp3x3_L3_k3x3_d1x1_maxp3x3.json  L1_k3x3_d1x1_maxp3x3_L2_k3x3_d1x1_maxp3x3_L3_k5x5_d1x1_maxp3x3.json  L1_k3x3_d1x1_maxp3x3_L2_k3x3_d1x1_maxp3x3_L3_k5x5_d1x1_maxp5x5.json
cmake/: FindCBLAS.cmake  FindLAPACK.cmake
decoder/: user_guided_decoder.py
demo/: CMakeLists.txt  main.c
include/: ift.h  iftActiveLearning.h  iftAdjSet.h  iftAdjacency.h  iftArgumentList.h  iftBagOfFeatures.h  iftBagOfVisualWords.h  iftBrainAffineRegistration.h  iftClassification.h  iftClustering.h  iftCommon.h  iftCompTree.h  iftCompression.h  iftCurve.h  iftDataSet.h  iftDataSetContextManager.h  iftDataTransference.h  iftDeepLearning.cuh  iftDeepLearning.h  iftDescriptors.h  iftDicom.h  iftDisjointSet.h  iftDistanceFunctions.h  iftFDK.h  iftFImage.h  iftFImageForest.h  iftFLIM.cuh  iftFLIM.h  iftFiltering.h  iftFitnessFunc.h  iftFunctions.h  iftGenericLinkedList.h  iftGenericMatrix.h  iftGenericMatrixUtil.h  iftGenericVector.h  iftGenericVectorUtil.h  iftGeometric.h  iftGif.h  iftGraphics.h  iftHierarchicCluster.h  (+46 more)
src/: DISF.h  iftActiveLearning.c  iftAdjSet.c  iftAdjacency.c  iftArgumentList.c  iftBagOfFeatures.c  iftBagOfVisualWords.c  iftBrainAffineRegistration.c  iftClassification.c  iftClustering.c  iftCommon.c  iftCompTree.c  iftCompression.c  iftCurve.c  iftDataSet_v1.c  iftDataSet_v2.c  iftDeepLearning.c  iftDeepLearning.cu  iftDescriptors.c  iftDicom.c  iftDisjointSet.c  iftDistanceFunctions.c  iftFDK.c  iftFImage.c  iftFImageForest.c  iftFLIM.c  iftFLIM.cu  iftFLIMDISF.c  iftFLIM_v1.c  iftFLIM_v2.c  iftFiltering.c  iftFunctions.c  iftGenericLinkedList.c  iftGenericMatrix.c  iftGenericVector.c  iftGeometric.c  iftGif.c  iftGraphics.c  iftHierarchicCluster.c  iftIGraph.c  (+44 more)
(+118 files in other folders)
